Updates for apple-ppc-brach, stree-branch, compile-server-branch, and apple-local-200502-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -186,14 +186,6 @@ particular releases or snapshots or the latest snapshot.  </p>
   could use or benefit from (like data-dependence analysis,
   <a href="projects/tree-ssa/lno.html">loop nest optimizations</a>).</dd>
 
-  <dt><a href="projects/strees/index.html">stree-branch</a></dt>
-  <dd>This branch is for improving compilation speed and reducing memory
-  use by representing declarations as small flat data structures whenever
-  possible, lazily expanding them into full trees when necessary.  This
-  branch is being maintained by Matt Austern, Robert Bowdidge, Geoff
-  Keating, and Mike Stump.  Patches should be marked with the tag
-  <code>[stree]</code> in the subject line.</dd>
-
   <dt><a href="projects/cfg.html">rtlopt-branch</a></dt>
   <dd>This branch is the successor to the cfg-branch, with the exception
   that it is based on GCC pre-3.4.  The purpose of the branch is to develop
@@ -204,13 +196,6 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>Daniel Berlin and Michael Matz are working on an implementation
   of a graph-coloring register allocator on this branch. It is known to
   bootstrap under x86-linux-gnu and ppc-linux-gnu.</dd>
-
-  <dt>compile-server-branch</dt>
-  <dd>This branch is aimed at improving compile speed by caching work
-  done between compilations.  The work saved is mainly related to header
-  file processing.  This branch is maintained by Mike Stump and Per Bothner.
-  Patches should be marked with the tag <code>[cs]</code> in the subject
-  line.</dd>
 
   <dt>tree-cleanup-branch</dt>
   <dd>This branch contains improvements and reorganization to the
@@ -388,11 +373,10 @@ permission of the distributing organization.  The branch name should
 be prefixed with the initials of the distributing organization.</p>
 
 <dl>
-  <dt>apple-ppc-branch</dt>
+  <dt>apple-local-200502-branch</dt>
   <dd>This branch is for various improvements in use at Apple and to
   coordinate work with others.  This branch is maintained by the folks
-  at Apple.  Patches should be marked with the tag
-  <code>[apple-ppc]</code> in the subject line.</dd>
+  at Apple.  Previous branch was apple-ppc-branch.</dd>
 
   <dt>csl-3_3_1-branch</dt>
   <dd>CodeSourcery release based on GCC 3.3.1.</dd>
@@ -423,6 +407,26 @@ be prefixed with the initials of the distributing organization.</p>
   gcj-abi-2-dev-branch<br />
   <a href="projects/tree-ssa/">tree-ssa-20020619-branch</a></dt>
   <dd>These branches have been merged into the mainline.</dd>
+
+  <dt>apple-ppc-branch</dt>
+  <dd>This branch was for various improvements in use at Apple and to
+  coordinate work with others.  This branch was maintained by the folks
+  at Apple.  It has been superseded by apple-local-200502-branch.</dd>
+
+  <dt><a href="projects/strees/index.html">stree-branch</a></dt>
+  <dd>This branch was for improving compilation speed and reducing memory
+  use by representing declarations as small flat data structures whenever
+  possible, lazily expanding them into full trees when necessary.  This
+  branch was being maintained by Matt Austern, Robert Bowdidge, Geoff
+  Keating, and Mike Stump.  Patches were marked with the tag
+  <code>[stree]</code> in the subject line.</dd>
+
+  <dt>compile-server-branch</dt>
+  <dd>This branch was aimed at improving compile speed by caching work
+  done between compilations.  The work saved is mainly related to header
+  file processing.  This branch was maintained by Mike Stump and Per Bothner.
+  Patches were marked with the tag <code>[cs]</code> in the subject
+  line.</dd>
 
   <dt>libobjc-branch</dt>
   <dd>The branch is aimed to clean up libobjc and make it run on Darwin.
