--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -43,6 +43,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alpha-unknown-linux-gnu</td>
+<td>Gentoo 2004.3, glibc 2.3.2</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-03/msg00471.html">3.4.3</a>
+</td>
+</tr>
+
+<tr>
 <td>alphaev56-dec-osf4.0f</td>
 <td>OSF1 V4.0</td>
 <td>Bootstrap (C, C++, F77, Obj-c):
@@ -122,6 +130,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01033.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00961.html">3.4.0</a>
 </td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>binutils 2.15</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-02/msg00229.html">3.4.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2005-02/msg00090.html">3.4.2</a>
 </tr>
 
 <tr>
@@ -217,6 +233,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00284.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01010.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Debian 3.0, glibc 2.2.5, kernel 2.4.27</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-01/msg00827.html">3.4.3</a>
 </td>
 </tr>
 
@@ -368,6 +392,22 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 8.0, glibc 2.2.93, kernel 2.6.11</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-03/msg00646.html">3.4.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat Enterprise Linux 3, glibc 2.3.2, kernel 2.4.21</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-02/msg00735.html">3.4.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SUSE 8.0 Professional, glibc 2.2.5, kernel 2.4.18</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-12/msg00516.html">3.4.3</a>
@@ -378,7 +418,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SUSE Linux 9.1, glibc 2.3.3, kernel 2.6.5</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-03/msg00264.html">3.4.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-10/msg00167.html">3.4.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SUSE Linux 9.2, glibc 2.3.3, kernel 2.6.8</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-02/msg00869.html">3.4.3</a>
 </td>
 </tr>
 
@@ -404,6 +453,14 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00094.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00429.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-sco3.2v5.0.6</td>
+<td>SCO OpenServer 5.0.6, GNU as</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-01/msg00752.html">3.4.3</a>
 </td>
 </tr>
 
@@ -507,6 +564,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-03/msg00166.html">3.4.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00865.html">3.4.0</a>
 </td>
 </tr>
