New entry for GCC 3.2:
   alphaev56-dec-osf5.1 (Tru64 Unix 5.1A)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -64,6 +64,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev56-dec-osf5.1</td>
+<td>Tru64 Unix 5.1A</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-01/msg01243.html">3.2</a>
+</tr>
+
+<tr>
 <td>alphaev56-unknown-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
 <td>Successful (C, C++, Obj-C):
