Add link to vectorizer webpage.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -86,7 +86,7 @@
           <li>Strength reduction</li>
           <li>Dead store elimination</li>
           <li>Dead and unreachable code elimination</li>
-          <li>Autovectorization</li>
+          <li><a href="../projects/tree-ssa/vectorization.html">Autovectorization</a></li>
           <li>Loop interchange</li>
           <li>Tail recursion by accumulation</li>
         </ul><br />
