--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -93,11 +93,10 @@
 
 <h3><a name="download">Downloading</a></h3>
 
-<p>Snapshots are located in the GCC FTP area, in the libstdc++ subdirectory,
-   <code>&lt;URL:ftp://gcc.gnu.org/pub/gcc/libstdc++/&gt;</code>.  You will
-   probably need to use one of the
-   <a href="http://gcc.gnu.org/mirrors.html">GCC mirror sites</a> due to
-   the heavy load on the main server.
+<p>libstdc++-v3 is developed and released as part of GCC, separate
+   snapshots are no longer made available.  The libstdc++-v3 sources are
+   included with the GCC sources and can be downloaded from the GCC FTP
+   area or from any of the <a href="../mirrors.html">GCC mirror sites</a>.
 </p>
 
 <p>The CVS source repository is part of the GCC repository.  Instructions
