Document new version numbering scheme

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -20,14 +20,11 @@ cvs rtag -b -r gcc-3_5-branchpoint gcc-3_5-branch gcc
 
 <li>Update <code>cvs.html</code> web page to list the new branch tags.</li>
 
-<li>Update the file <code>gcc/version.c</code> on the branch, to say
+<li>Update the file <code>gcc/DEV-PHASE</code> on the branch, to say
 &quot;prerelease&quot; instead of &quot;experimental&quot;.</li>
 
-<li>Update the file <code>gcc/version.c</code> on the mainline, to use
+<li>Update the file <code>gcc/BASE-VER</code> on the mainline, to use
 the next major release number (e.g., 3.2 instead of 3.1).</li>
-
-<li>Update <code>doc/include/gcc-common.texi</code> on the mainline to 
-use the next major release number.</li>
 
 <li>Create a new <code>htdocs/gcc-<var>VERSION</var></code> directory
 for the next major release in the <code>wwwdocs</code> repository and
@@ -41,9 +38,6 @@ Update the toplevel <code>buildstat.html</code> accordingly.</li>
 <li>Update the <code>index.html</code> web page to show the new active
 release branch, the current release series, and active development
 (mainline).  Update the version and development stage for mainline.</li>
-
-<li>Update <code>doc/include/gcc-common.texi</code> on the branch to use
-<code>@clear DEVELOPMENT</code>.</li>
 
 <li>Update <code>maintainer-scripts/crontab</code> on the mainline by
 adding an entry to make shapshots of the new branch and adjusting the
@@ -64,9 +58,6 @@ new snapshot as well as the mail itself before relaying it.
 <code>gcc.pot</code></a> and <code>cpplib.pot</code>.
 <a href="http://gcc.gnu.org/translation.html#submit">Send them
 to the translation project</a>.</li>
-
-<li>Update the file <code>gcc/configure.ac</code> so that the
-<code>is_release</code> shell variable is 1.</li>
 
 <li>Create new versions in Bugzilla corresponding to the new mainline 
 version.  This can be accomplished by choosing products, choosing gcc, 
