Tweak wording in alias restriction

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -111,8 +111,8 @@
         terminated.  See the GCC manual for a complete description of
         its behavior.</li>
     <li>Given <code>__attribute__((alias("target")))</code> it is now
-        an error if <code>target</code> is not defined in the same
-        translation unit.  This also applies to aliases created by
+        an error if <code>target</code> is not a symbol, defined in the
+        same translation unit.  This also applies to aliases created by
         <code>#pragma weak alias=target</code>.  This is because it's
         meaningless to define an alias to an undefined symbol.  On
         Solaris, the native assembler would have caught this error,
