Add information about reload-branch

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -255,6 +255,11 @@ particular releases or snapshots or the latest snapshot.  </p>
   routinely merged with mainline.  Patches should be marked with the
   tag <code>[dfp]</code> in the subject line.</dd>
 
+  <dt>reload-branch</dt>
+  <dd>This branch contains a version of reload in which the tracking
+  of reload register lifetimes and the inheritance code has been
+  rewritten in an attempt to make it more maintainable.</dd>
+
 </dl>
 
 <h4>Architecture-specific</h4>
