The libg++ page has moved.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -70,7 +70,7 @@ tools for the TMS340x0</a></h2>
 
 <p>A GCC port to a <em>bit-addressable</em> architecture.</p>
 
-<h2><a name="libgxx"></a><a href="http://manfred-h.bei.t-online.de/libgxx/">Libg++</a></h2>
+<h2><a name="libgxx"></a><a href="http://www.suse.de/~mh/libgxx/">Libg++</a></h2>
 
 <p><code>Libg++</code>, the GNU C++ library, has been superseded by
 <code>libstdc++</code>.</p>
