--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -16,20 +16,20 @@
 <li><a href="#documentation_projects">Projects for improving the GCC documentation</a></li>
 <li><a href="#development_branches">Development Branches</a></li>
 <li><a href="#optimizer_inadequacies">Optimizer inadequacies</a></li>
-<li><a href="#c99_support">Changes to support C99 standard</a></li>
-<li><a href="#miscellaneous_ideas">Miscellaneous ideas:</a>
+<li><a href="#c_front_end">Projects for improving the C front end:</a>
 <ul>
 <li><a href="#improve_wconversion">Improve <code>-Wconversion</code></a></li>
+<li><a href="#more_warnings">Add more warnings</a></li>
+<li><a href="#c99_support">Changes to support C99 standard</a></li>
 <li><a href="#implement_various_builtin_functions_for_isoc99">Implement various builtin functions for ISO C99's 
 <code>&lt;tgmath.h&gt;</code></a></li>
-</ul></li>
 <li><a href="#format_checking">Format (<code>printf</code>, <code>scanf</code> and
 <code>strftime</code>) checking:</a></li>
+</ul></li>
 <li><a href="#improve_the_installation_procedure">Improve the installation procedure</a></li>
 <li><a href="#simpler_porting">Simpler porting</a></li>
 <li><a href="#other_languages">Other languages</a></li>
 <li><a href="#generalize_the_machine_model">Generalize the machine model</a></li>
-<li><a href="#more_warnings">More warnings</a></li>
 <li><a href="#the_old_problems_file">The old PROBLEMS file</a></li>
 </ul>
 <!-- table of contents end -->
@@ -70,24 +70,32 @@ pursuing various goals.</p>
 inadequacies</a>, if you'd prefer to think about it in terms of problems
 instead of features.</p>
 
-<h2><a name="c99_support">Changes to support C99 standard</a></h2>
+<h2><a name="c_front_end">Projects for the C front end</a></h2>
 
+<p>The following are some ideas for C front-end projects to work on.</p>
+
+<h3><a name="improve_wconversion">Improve <code>-Wconversion</code></a></h3>
+<p>Improve <code>-Wconversion</code> so that it can be used for
+security auditing as well as for its original intended purpose of
+helping with converting old code to ISO C.</p>
+
+<h3><a name="more_warnings">More warnings</a></h3>
+<p>Warn about statements that are undefined because the order of
+evaluation of increment operators makes a big difference.  Here is an
+example:</p>
+<pre>
+*foo++ = hack (*foo);
+</pre>
+<p><code>-Wsequence-point</code> does some of this, but not that
+particular case.</p>
+
+<h3><a name="c99_support">Changes to support C99 standard</a></h3>
 <p>The new version of the C standard (ISO/IEC 9899:1999) requires a
 number of library changes; these have to be provided by the C library,
 and not by gcc.  In addition, there are also changes to the language
 proper, and some compiler support is needed for the new library
 features.  An <a href="../c99status.html">overview</a> of the C99
 implementation status is available.</p>
-
-<h2><a name="miscellaneous_ideas">Miscellaneous ideas:</a></h2>
-
-<p>The following are some miscellaneous ideas for GCC projects to work
-on.</p>
-
-<h3><a name="improve_wconversion">Improve <code>-Wconversion</code></a></h3>
-<p>Improve <code>-Wconversion</code> so that it can be used for
-security auditing as well as for its original intended purpose of
-helping with converting old code to ISO C.</p>
 
 <h3><a name="implement_various_builtin_functions_for_isoc99">Implement various builtin functions for ISO C99's 
 <code>&lt;tgmath.h&gt;</code></a></h3> 
@@ -106,8 +114,8 @@ but which have complex result type for complex arguments.  The design
 for these builtins should be discussed with the gcc and libc-alpha
 lists.</p>
 
-<h2><a name="format_checking">Format (<code>printf</code>,
-<code>scanf</code> and <code>strftime</code>) checking:</a></h2>
+<h3><a name="format_checking">Format (<code>printf</code>,
+<code>scanf</code> and <code>strftime</code>) checking:</a></h3>
 
 <ul>
   <li>Make re-entrant: eliminate global state used for <code>$</code>
@@ -269,18 +277,6 @@ now have a way to understand this.</p>
 
 <p>The scheduler does not do very well on recent RISC machines.  Haifa
 helps but not enough.</p>
-
-<h2><a name="more_warnings">More warnings</a></h2>
-
-<p>Warn about statements that are undefined because the order of
-evaluation of increment operators makes a big difference.  Here is an
-example:</p>
-<pre>
-*foo++ = hack (*foo);
-</pre>
-
-<p><code>-Wsequence-point</code> does some of this, but not that
-particular case.</p>
 
 <hr />
 
