Mention deprecation of minimum/maximum operators

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -203,6 +203,13 @@ register int bar;
 	*</code> could be overridden by a function returning
 	<code>T *</code>.  This is now deprecated and will be removed in
 	a future release.</li>
+ 
+    <li>The G++ minimum and maximum operators (<code>&lt;?</code> and
+        <code>&gt;?</code>) and their compound forms
+        (<code>&lt;?=</code>) and <code>&gt;?=</code>) have been
+        deprecated and will be removed in a future version.  Code
+        using these operators should be modified to use
+        <code>std::min</code> and <code>std::max</code> instead.</li>
 
     <li>Declaration of nested classes of class templates as friends are
 	supported:
