--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -28,7 +28,7 @@ the next major release number (e.g., 3.2 instead of 3.1).</li>
 
 <li>Update the file <code>gcc/contrib/gcc_update</code> on the branch,
 so that the &quot;$GCC_CVS update&quot; invocation uses
-&quot;-r <var>BRANCH_NAME</var/>&quot;.</li>
+&quot;-r <var>BRANCH_NAME</var>&quot;.</li>
 
 <li>Create a new <code>htdocs/gcc-<var>VERSION</var></code> directory
 for the next major release in the <code>wwwdocs</code> repository and
