* cvs.html: Move java-gui-20050128-branch to Inactive Development 	Branches section.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -348,10 +348,6 @@ particular releases or snapshots or the latest snapshot.  </p>
   &lt;<a href="mailto:neroden@gcc.gnu.org">neroden@gcc.gnu.org</a>&gt;
   is maintaining this branch.</dd>
 
-  <dt>java-gui-20050128-branch</dt>
-  <dd>This is a temporary branch for development of java GUI libraries
-  (AWT and Swing) in the libjava directory.</dd>
-
   <dt>gcjx-branch</dt>
   <dd>This branch is used for development of gcjx, a rewrite of the
     front end for the Java programming language.  Patches should be
@@ -485,6 +481,11 @@ be prefixed with the initials of the distributing organization.</p>
   <dd>This was a temporary branch for development of java GUI libraries
   (AWT and Swing) in the libjava directory.  It has been superseded
   by java-gui-20050128-branch</dd>
+
+  <dt>java-gui-20050128-branch</dt>
+  <dd>This was a temporary branch for development of java GUI libraries
+  (AWT and Swing) in the libjava directory.  It has been merged into
+  mainline.</dd>
 
 </dl>
 
