--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -326,7 +326,7 @@ stages of development, branch points, and releases:</p>
   Tree SSA infrastructure                  GCC 3.4.0 release (April 18 2004)
   merged to mainline (May 17 2004)          \
        |                                     v
-  GCC 4.0 stage 2                          GCC 3.4.1 release (July 1 2004)
+  GCC 4.0 Stage 2                          GCC 3.4.1 release (July 1 2004)
        |                                      \
        |                                       v
   GCC 4.0 Stage 3                          GCC 3.4.2 release (Sep 6 2004)
@@ -334,11 +334,16 @@ stages of development, branch points, and releases:</p>
        |                                         v
        |                                   GCC 3.4.3 release (Nov 4 2004)
        |
-       +-- GCC 4.0 branch --------------+
+       +-- GCC 4.0 branch created ------+
        |            (Feb 25 2005)        \ 
        |                                  v
-       |                                   GCC 4.0.0 release (early 2005,
-       |                                                      TENTATIVELY)
+  GCC 4.1 Stage 1 (ends April 25 2005)     GCC 4.0.0 release (April 2005)
+       |                                    \
+       |                                     v
+  GCC 4.1 Stage 2 (ends June 25 2005)      GCC 4.0.1 release
+       |
+       v
+  GCC 4.1 Stage 3 
        |
        :
        v
