Document bje-unsw-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -260,6 +260,13 @@ particular releases or snapshots or the latest snapshot.  </p>
   of reload register lifetimes and the inheritance code has been
   rewritten in an attempt to make it more maintainable.</dd>
 
+  <dt>bje-unsw-branch</dt>
+
+  <dd>This branch contains research work being undertaken by Ben
+  Elliston at the University of New South Wales (UNSW) on
+  transformation phase ordering.  It will track the GCC 4.0 release
+  branch, but it is very unlikely that this branch will ever
+  merge.</dd>
 </dl>
 
 <h4>Architecture-specific</h4>
