Mark csl-hpux-branch and csl-sol210-branch as inactive.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -279,18 +279,6 @@ particular releases or snapshots or the latest snapshot.  </p>
   be marked with the tag <code>[csl-arm-branch]</code> in the subject
   line.</dd>
 
-  <dt>csl-hpux-branch</dt>
-  <dd>CodeSourcery branch for developing HP-UX improvements.
-  The branch is maintained by CodeSourcery personnel.  Patches should
-  be marked with the tag <code>[csl-hpux-branch]</code> in the subject
-  line.</dd>
-
-  <dt>csl-sol210-branch</dt>
-  <dd>CodeSourcery branch for developing Solaris 2.10 AMD64 support.
-  This branch is maintained by CodeSourcery personnel.  Patches should
-  be marked with the tag <code>[csl-sol210-branch]</code> in the
-  subject line.</dd>
-
   <dt>csl-sol210-3_4-branch</dt>
   <dd>CodeSourcery branch for developing Solaris 2.10 AMD64 support
   for GCC 3.4.  This branch is maintained by CodeSourcery personnel.
@@ -413,7 +401,8 @@ be prefixed with the initials of the distributing organization.</p>
   mips-3_4-rewrite-branch<br />
   dfa-branch<br />
   gcj-abi-2-dev-branch<br />
-  <a href="projects/tree-ssa/">tree-ssa-20020619-branch</a></dt>
+  <a href="projects/tree-ssa/">tree-ssa-20020619-branch</a><br />
+  csl-sol210-branch (Solaris 2.10 AMD64 support)</dt>
   <dd>These branches have been merged into the mainline.</dd>
 
   <dt>apple-ppc-branch</dt>
@@ -493,6 +482,10 @@ be prefixed with the initials of the distributing organization.</p>
   <dd>This was a temporary branch for development of java GUI libraries
   (AWT and Swing) in the libjava directory.  It has been merged into
   mainline.</dd>
+
+  <dt>csl-hpux-branch</dt>
+  <dd>This branch was for changes to G++ to be more compatible with
+  ABI bugs in the HP-UX C++ compiler.  It is now unmaintained.</dd>
 
 </dl>
 
