--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -63,7 +63,9 @@ mission statement</a>.</p>
 <dt><strong>Next release series:</strong>
   will become GCC 4.0.0 (<a href="gcc-4.0/changes.html">current changes</a>)
 </dt><dd>
-  Branch status: open for regression fixes only.
+  Branch status:
+  <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg00170.html">2005-04-05</a>
+  (open for regression fixes only)
 </dd>
 
 <dt><strong>Active development (mainline):</strong>
