Update for addition of Blackfin port

--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -69,7 +69,8 @@ Target   | HMSLQNFICBD lqrcpfgmbdates
 alpha    |  ?? Q   C    q  p g bda e 
 arc      | ???   FI B      pf m d    
 arm      |                      da  s
-avr      |    L  FI    l  c f m      
+avr      |    L  FI    l  c f m
+bfin     |       F         p g  da
 c4x      |  ??  N I BD       g  d te 
 cris     |       F  B     cpf m  a  s
 fr30     | ??    FI B        gm   t s
