--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -89,6 +89,14 @@ mission statement</a>.</p>
 <h2><small>News/Announcements</small></h2>
 
 <dl>
+
+<dt><b>April 5, 2005</b></dt>
+<dd>
+Analog Devices has contributed a port for the
+Blackfin processor.  See the <a href="http://blackfin.uclinux.org">Blackfin
+projects</a> page for more information and ports of binutils and gdb.
+</dd>
+
 <dt><b>February 06, 2005</b></dt>
 <dd>
 gcc.gnu.org suffered hardware failure and had to be restored from backups.
