--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -89,7 +89,14 @@ names.
   <br />Manufacturer: Atmel
   <br /><a href="http://www.atmel.com/products/AVR/">AVR Documentation</a>
  </li>
- 
+
+ <li>Blackfin
+  <br />Manufacturer: Analog Devices
+  <br /><a href="http://blackfin.uclinux.org">uClinux and GNU toolchains for
+  the Blackfin</a>
+  <br /><a href="http://www.analog.com/blackfin">Blackfin Documentation</a>
+ </li>
+
  <li>c4x
    <br />Manufacturer: Texas Instruments
    <br />Exact chip name: TMS320C4X
