2005-04-07  Paolo Carlini  <pcarlini@suse.de>
	* htdocs/gcc-4.0/changes.html: Add a section about the
	C++ Runtime Library.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -245,6 +245,37 @@ class N::A {
 };</pre></li>
   </ul>
 
+<h4>Runtime Library (libstdc++)</h4>
+
+  <ul>
+    <li>Optimization work:
+      <ul>
+        <li>Added efficient specializations of <code>istream</code> functions
+	for char and <code>wchar_t</code>.</li>
+	<li>Further performance tuning of <code>strings</code>, in particular
+	wrt single-char <code>append</code> and <code>getline</code>.</li>
+	<li><code>iter_swap</code> - and therefore most of the mutating 
+	algorithms - now makes an unqualified call to <code>swap</code> when
+	the <code>value_type</code> of the two iterators is the same.</li>
+      </ul></li>
+    <li>A large subset of the features in Technical Report 1 (TR1 for short)
+    is <strong>experimentally</strong> delivered (i.e., no guarantees about
+    the implementation are provided. In particular it is not promised that the
+    library will remain link compatible when code using TR1 is used):
+      <ul>
+        <li>General utilities such as <code>reference_wrapper</code> and
+	<code>shared_ptr</code>.</li>
+	<li>Function objects, i.e., <code>result_of</code>, <code>mem_fn</code>,
+	<code>bind</code>, <code>function</code>.</li>
+	<li>Support for metaprogramming.</li>
+	<li>New containers such as <code>tuple</code>, <code>array</code>,
+	<code>unordered_set</code>, <code>unordered_map</code>,
+	<code>unordered_multiset</code>, <code>unordered_multimap</code>.</li>
+      </ul></li>
+     <li>As usual, many bugs have been fixed and LWG resolutions implemented
+     for the first time (e.g., DR 409).</li>
+  </ul>
+
 <h3>Java</h3>
 
   <ul>
