--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -71,9 +71,9 @@ arc      | ???   FI B      pf m d
 arm      |                      da  s
 avr      |    L  FI    l  c f m
 bfin     |       F         p g  da
-c4x      |  ??  N I BD       g  d te 
+c4x      |  ??  N I BD       g  d  e 
 cris     |       F  B     cpf m  a  s
-fr30     | ??    FI B        gm   t s
+fr30     | ??    FI B        gm     s
 frv      | ??       B      p    da  s
 h8300    |       FI       cp g      s
 i386     |   ? Q        q  p    da   
@@ -82,7 +82,7 @@ ia64     |   ? Q   C    qr p    da
 ip2k     | ???L  FI    l  c f mb     
 iq2000   | ???   FICB      p g  d t  
 m32r     |       FI             d   s
-m68hc11  |    L  FI    l  c       t s
+m68hc11  |    L  FI    l  c         s
 m68k     |   ?            c f    a   
 mcore    |  ?    FI          gm d   s
 mips     |     Q   CB   qr p   bda  s
@@ -95,7 +95,7 @@ rs6000   |     Q   C    qr      da
 s390     |   ? Q        qr p g bda e 
 sh       |     Q   CB   qr      da   
 sparc    |     Q   CB   qr p    da   
-stormy16 | ???L  FIC D l   p  m  at  
+stormy16 | ???L  FIC D l   p  m  a
 v850     | ??    FI       cp gm d   s
 vax      |  M?    I       cp     a e 
 xtensa   |   ?     C       p   bd    
