--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -72,7 +72,7 @@ arm      |                      da  s
 avr      |    L  FI    l  c f m
 bfin     |       F         p g  da
 c4x      |  ??  N I BD       g  d  e 
-cris     |       F  B     cpf m  a  s
+cris     |       F  B     cp  m  a  s
 fr30     | ??    FI B        gm     s
 frv      | ??       B      p    da  s
 h8300    |       FI       cp g      s
