Add announcement for VRP.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,6 +90,12 @@ mission statement</a>.</p>
 
 <dl>
 
+<dt><b>April 12, 2005</b></dt>
+<dd>
+Diego Novillo of Red Hat has contributed a Value Range Propagation
+pass.
+</dd>
+
 <dt><b>April 5, 2005</b></dt>
 <dd>
 Analog Devices has contributed a port for the
