--- a/htdocs/projects/tree-ssa/vectorization.html
+++ b/htdocs/projects/tree-ssa/vectorization.html
@@ -1773,7 +1773,7 @@ for (i = 0; i &lt; N; i++) {
                 to handle. [done for loads]</li>
 
                 <li>Build a cost model to decide when to apply
-                loop-peeling and/or loop-versioining to force alignment,
+                loop-peeling and/or loop-versioning to force alignment,
                 and when to generate unaligned vector accesses.</li>
             </ul>
 
