--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -350,6 +350,26 @@ class N::A {
     </li>
   </ul> 
 
+<h3>Ada</h3>
+
+  <ul>
+    <li>Ada (with tasking and Zero Cost Exceptions) is now available on many
+        more targets, including but not limited to: alpha-linux, hppa-hpux, 
+        hppa-linux, powerpc-darwin, powerpc-linux, s390-linux, s390x-linux,
+        sparc-linux.
+    </li>
+    <li>Some of the new Ada 2005 features are now implemented like 
+        <code>Wide_Wide_Character</code> and <code>Ada.Containers</code>.
+    </li>
+    <li>Many bugs have been fixed, tools and documentation improved.</li>
+    <li>To compile Ada from the sources, install an older working Ada compiler 
+        and then use <code>--enable-languages=ada</code> at configuration time, 
+        since the Ada frontend is not currently activated by default. See
+        the <a href="http://gcc.gnu.org/install/">Installing GCC</a>
+        for details.
+    </li>
+  </ul> 
+
 <h2>New Targets and Target Specific Improvements</h2>
 
 <h3>H8/300</h3>
