--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -64,8 +64,8 @@ mission statement</a>.</p>
   will become GCC 4.0.0 (<a href="gcc-4.0/changes.html">current changes</a>)
 </dt><dd>
   Branch status:
-  <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg00170.html">2005-04-05</a>
-  (open for regression fixes only)
+  <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg00994.html">2005-04-18</a>
+  (all patches require approval by release manager)
 </dd>
 
 <dt><strong>Active development (mainline):</strong>
