No longer require editing cvs.html for every release, instead providing general instructions.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -114,39 +114,17 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <h3>Release and snapshot branches</h3>
 
+<p>The CVS tag for GCC release <i>X</i>.<i>Y</i>.<i>Z</i> is generally of
+the form "gcc_<i>X</i>_<i>Y</i>_<i>Z</i>"; the following list therefore
+provides only some representative examples.</p>
+
 <ul>
   <li>gcc_ss_<i>yyyymmdd</i></li>
-  <li>gcc-4_0-branch</li>
   <li>gcc_3_4_3_release</li>
   <li>gcc_3_4_2_release</li>
   <li>gcc_3_4_1_release</li>
   <li>gcc_3_4_0_release</li>
   <li>gcc-3_4-branch</li>
-  <li>gcc_3_3_5_release</li>
-  <li>gcc_3_3_4_release</li>
-  <li>gcc_3_3_3_release</li>
-  <li>gcc_3_3_1_release</li>
-  <li>gcc_3_3_release</li>
-  <li>gcc-3_3-branch</li>
-  <li>gcc_3_2_3_release</li>
-  <li>gcc_3_2_2_release</li>
-  <li>gcc_3_2_1_release</li>
-  <li>gcc_3_2_release</li>
-  <li>gcc-3_2-branch</li>
-  <li>gcc_3_1_1_release</li>
-  <li>gcc_3_1_release</li>
-  <li>gcc-3_1-branch</li>
-  <li>gcc_3_0_4_release</li>
-  <li>gcc_3_0_3_release</li>
-  <li>gcc_3_0_2_release</li>
-  <li>gcc_3_0_1_release</li>
-  <li>gcc_3_0_release</li>
-  <li>gcc-3_0-branch</li>
-  <li>gcc-2_95_3</li>
-  <li>gcc-2_95_2-release</li>
-  <li>gcc-2_95_1-release</li>
-  <li>gcc-2_95-release</li>
-  <li>gcc-2_95-branch</li>
   <li>egcs_1_1_2_release</li>
   <li>egcs_1_1_1_release</li>
   <li>egcs_1_1_release</li>
