--- a/htdocs/gcc-4.0/index.html
+++ b/htdocs/gcc-4.0/index.html
@@ -8,9 +8,19 @@
 
 <h1>GCC 4.0 Release Series</h1>
 
+<p>April 20, 2005</p>
+
+<p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
+developers are pleased to announce the release of GCC 4.0.0.</p>
+
 <h2>Release History</h2>
 
-<p>GCC 4.0 has not yet been released.</p>
+<dl>
+<dt>GCC 4.0.0</dt>
+<dd><a name="4.0.0">April 20, 2005</a>
+    (<a href="changes.html">changes</a>)
+</dd>
+</dl>
 
 <h2>References and Acknowledgements</h2>
 
