--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -337,7 +337,7 @@ stages of development, branch points, and releases:</p>
        +-- GCC 4.0 branch created ------+
        |            (Feb 25 2005)        \ 
        |                                  v
-  GCC 4.1 Stage 1 (ends April 25 2005)     GCC 4.0.0 release (April 2005)
+  GCC 4.1 Stage 1 (ends April 25 2005)     GCC 4.0.0 release (April 20 2005)
        |                                    \
        |                                     v
   GCC 4.1 Stage 2 (ends June 25 2005)      GCC 4.0.1 release
