--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,6 +90,11 @@ mission statement</a>.</p>
 
 <dl>
 
+<dt><b>April 20, 2005</b></dt>
+<dd>
+<a href="gcc-4.0/">GCC 4.0.0</a> has been released.
+</dd>
+
 <dt><b>April 12, 2005</b></dt>
 <dd>
 Diego Novillo of Red Hat has contributed a Value Range Propagation
