--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,6 +36,12 @@ mission statement</a>.</p>
 -->
 
 <dt><strong>Current release series:</strong>
+  <a href="gcc-4.0/">GCC 4.0.0</a> (released 2005-04-20)
+</dt><dd>
+  Branch status: frozen.
+</dd>
+
+<dt><strong>Previous release series:</strong>
   <a href="gcc-3.4/">GCC 3.4.3</a> (released 2004-11-04)
 </dt><dd>
   Branch status:
@@ -43,6 +49,7 @@ mission statement</a>.</p>
   (open for regression fixes only).
 </dd>
 
+<!--
 <dt><strong>Previous release series:</strong>
   <a href="gcc-3.3/">GCC 3.3.5</a> (released 2004-09-30)
 </dt><dd>
@@ -50,6 +57,7 @@ mission statement</a>.</p>
   <a href="http://gcc.gnu.org/ml/gcc/2005-01/msg01253.html">2005-01-20</a>
   (open for regression fixes only).
 </dd>
+-->
 
 <!--
 <dt><strong>Previous release series:</strong>
@@ -60,6 +68,7 @@ mission statement</a>.</p>
 </dd>
 -->
 
+<!--
 <dt><strong>Next release series:</strong>
   will become GCC 4.0.0 (<a href="gcc-4.0/changes.html">current changes</a>)
 </dt><dd>
@@ -67,6 +76,7 @@ mission statement</a>.</p>
   <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg00994.html">2005-04-18</a>
   (all patches require approval by release manager)
 </dd>
+-->
 
 <dt><strong>Active development (mainline):</strong>
   will become GCC 4.1.0 (<a href="gcc-4.1/changes.html">current changes</a>)
