Fix and enhance "Release and snapshot branches". Originally by Daniel Jacobowitz <drow@false.org>.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -114,9 +114,12 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <h3>Release and snapshot branches</h3>
 
-<p>The CVS tag for GCC release <i>X</i>.<i>Y</i>.<i>Z</i> is generally of
-the form "gcc_<i>X</i>_<i>Y</i>_<i>Z</i>"; the following list therefore
-provides only some representative examples.</p>
+<p>For recent releases, the CVS tag for GCC <i>X</i>.<i>Y</i>.<i>Z</i> is
+of the form "gcc_<i>X</i>_<i>Y</i>_<i>Z</i>_release"; the following list
+therefore provides only some representative examples.</p>
+
+<p>The CVS branch for GCC releases in the <i>X</i>.<i>Y</i> series is
+generally of the form "gcc-<i>X</i>_<i>Y</i>-branch".</p>
 
 <ul>
   <li>gcc_ss_<i>yyyymmdd</i></li>
