Mention obsolete systems.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -533,7 +533,16 @@ class N::A {
   GCC 4.0.  Unless there is activity to revive them, the next release of
   GCC will have their sources permanently <strong>removed</strong>.</p>
 
-  <p>These individual systems have been obsoleted:</p>
+  <p>All configurations of the following processor architectures have
+  been declared obsolete:</p>
+
+  <ul>
+    <li>Intel i860</li>
+    <li>Ubicom IP2022</li>
+    <li>National Semiconductor NS32K</li>
+  </ul>
+
+  <p>Also, some individual systems have been obsoleted:</p>
 
   <ul>
     <li>SPARC family
