Update 4.0 branch status.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,7 +38,8 @@ mission statement</a>.</p>
 <dt><strong>Current release series:</strong>
   <a href="gcc-4.0/">GCC 4.0.0</a> (released 2005-04-20)
 </dt><dd>
-  Branch status: frozen.
+  Branch status:
+  open for regression and documentation fixes.
 </dd>
 
 <dt><strong>Previous release series:</strong>
