2005-04-24  Paolo Carlini  <pcarlini@suse.de>
	* htdocs/gcc-4.0/changes.html (libstdc++): Tweaks suggested by Gerald.

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -251,7 +251,7 @@ class N::A {
     <li>Optimization work:
       <ul>
         <li>Added efficient specializations of <code>istream</code> functions
-	for char and <code>wchar_t</code>.</li>
+	for <code>char</code> and <code>wchar_t</code>.</li>
 	<li>Further performance tuning of <code>strings</code>, in particular
 	wrt single-char <code>append</code> and <code>getline</code>.</li>
 	<li><code>iter_swap</code> - and therefore most of the mutating 
@@ -261,7 +261,7 @@ class N::A {
     <li>A large subset of the features in Technical Report 1 (TR1 for short)
     is <strong>experimentally</strong> delivered (i.e., no guarantees about
     the implementation are provided. In particular it is not promised that the
-    library will remain link compatible when code using TR1 is used):
+    library will remain link-compatible when code using TR1 is used):
       <ul>
         <li>General utilities such as <code>reference_wrapper</code> and
 	<code>shared_ptr</code>.</li>
