Close tree-cleanup-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -177,16 +177,6 @@ generally of the form "gcc-<i>X</i>_<i>Y</i>-branch".</p>
   <dd>Daniel Berlin and Michael Matz are working on an implementation
   of a graph-coloring register allocator on this branch. It is known to
   bootstrap under x86-linux-gnu and ppc-linux-gnu.</dd>
-
-  <dt>tree-cleanup-branch</dt>
-  <dd>This branch contains improvements and reorganization to the
-  tree optimizers that were not ready in time for GCC 4.0.  The
-  goal is to cleanup the tree optimizers and improve the sequencing
-  of the passes.  The branch is maintained by Diego Novillo.
-  Patches and discussion related to the branch should be marked
-  with the tag <code>[tcb]</code> in the subject line.  The usual
-  contribution and testing rules apply.  Patches should be CC'd
-  to Diego Novillo for final approval.</dd>
  
   <dt>structure-aliasing-branch</dt>
   <dd>This branch contains improvements to the tree optimizers ability 
@@ -468,6 +458,12 @@ be prefixed with the initials of the distributing organization.</p>
   <dd>This branch was for changes to G++ to be more compatible with
   ABI bugs in the HP-UX C++ compiler.  It is now unmaintained.</dd>
 
+  <dt>tree-cleanup-branch</dt>
+  <dd>This branch contained improvements and reorganization to the
+  tree optimizers that were not ready in time for GCC 4.0.  The
+  goal was to cleanup the tree optimizers and improve the sequencing
+  of the passes.  It has now been merged into mainline for the
+  4.1 release.</dd>
 </dl>
 
 <h2><a name="wwwdocs">Web pages</a></h2>
