Bootstrap and test results for 4.0.0:
  hppa2.0w-hp-hpux11.00
  i686-pc-linux-gnu (Red Hat Enterprise 3)
  x86_64-unknown-linux-gnu (AMD Opteron) (Red Hat Enterprise 3)

Bootstrap for 4.0.0:

  i386-pc-solaris2.10 (AMD Opteron)
  i686-pc-linux-gnu (Mandrake 10.1, glibc 2.3.3, kernel 2.6.8)
  i686-pc-linux-gnu (Red Hat 9, glibc 2.3.2)
  i686-pc-linux-gnu (SuSE Personal 9.1, glibc 2.3.3, kernel 2.6.5)
  i686-pc-linux-gnu (SuSE 9.2, glibc 2.3.3, kernel 2.6.8)
  mips-sgi-irix6.3 (binutils 2.15)
  powerpc-unknown-linux-gnu (hand-crafted GNU/Linux, binutils 2.15.91.0.1,
        glibc 2.3.3, kernel 2.5.3)
  sparc-sun-solaris2.7 (binutils 2.15.92 20050420)

--- a/htdocs/gcc-4.0/buildstat.html
+++ b/htdocs/gcc-4.0/buildstat.html
@@ -20,5 +20,104 @@ including a list of information to include in such a report, are part of
 <a href="http://gcc.gnu.org/install/finalinstall.html">
 Installing GCC: Final Installation</a>.</p>
 
+<table>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>as from binutils 2.15</td>
+<td>Bootstrap (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01247.html">4.0.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01570.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.10 (AMD Opteron)</td>
+<td>binutils 2.15.92 20050420</td>
+<td>Bootstrap (C, Obj-C; C++ build failed):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01294.html">4.0.0</a>
+</td>
+</tr>
+
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 10.1, glibc 2.3.3, kernel 2.6.8</td>
+<td>Bootstrap (Ada, C, C++, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01258.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat Enterprise 3</td>
+<td>Bootstrap (C, C++, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01247.html">4.0.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01541.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 9, glibc 2.3.2</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01336.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE Personal 9.1, glibc 2.3.3, kernel 2.6.5</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01316.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 9.2, glibc 2.3.3, kernel 2.6.8</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01235.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.3</td>
+<td>binutils 2.15</td>
+<td>Bootstrap (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01261.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>hand-crafted GNU/Linux, binutils 2.15.91.0.1, glibc 2.3.3, kernel 2.5.3</td>
+<td>Bootstrap (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01317.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>binutils 2.15.92 20050420</td>
+<td>Bootstrap (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01294.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-unknown-linux-gnu (AMD Opteron)</td>
+<td>Red Hat Enterprise 3</td>
+<td>Bootstrap (C, C++, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01247.html">4.0.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01598.html">4.0.0</a>
+</td>
+</tr>
+
+</table>
+
 </body>
 </html>
