Test results for 4.0.0:
  crx-unknown-elf
  i386-pc-solaris2.10
  i686-pc-linux-gnu          (7 of them)
  ia64-unknown-linux-gnu
  sparc-sun-solaris2.8
  sparc-sun-solaris2.9
  sparc-unknown-linux-gnu    (2 of them)
  sparc64-unknown-linux-gnu  (2 of them)
  x86_64-unknown-linux-gnu   (2 of them)
  xtensa-unknown-elf

--- a/htdocs/gcc-4.0/buildstat.html
+++ b/htdocs/gcc-4.0/buildstat.html
@@ -23,6 +23,14 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>crx-unknown-elf</td>
+<td>cross compiler</td>
+<td>Test results using simulator:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01782.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>as from binutils 2.15</td>
 <td>Bootstrap (C, C++, Obj-C):
@@ -33,13 +41,26 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<td>i386-pc-solaris2.10 (AMD Opteron)</td>
-<td>binutils 2.15.92 20050420</td>
-<td>Bootstrap (C, Obj-C; C++ build failed):
-<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01294.html">4.0.0</a>
+<td>i386-pc-solaris2.10</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01595.html">4.0.0</a>
 </td>
 </tr>
 
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01794.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01660.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01616.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01612.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01596.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01582.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01499.html">4.0.0</a>
+</td>
+</tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
@@ -84,6 +105,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01633.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
 <td>mips-sgi-irix6.3</td>
 <td>binutils 2.15</td>
 <td>Bootstrap (C, C++):
@@ -108,12 +137,63 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01623.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01642.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01646.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01529.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01707.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01542.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01629.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01615.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
 <td>x86_64-unknown-linux-gnu (AMD Opteron)</td>
 <td>Red Hat Enterprise 3</td>
 <td>Bootstrap (C, C++, Obj-C, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01247.html">4.0.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01598.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>xtensa-unknown-elf</td>
+<td>cross compiler</td>
+<td>Test results using simulator:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01590.html">4.0.0</a>
 </td>
 </tr>
 
